--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
+  "procy": "http://localhost:4444",
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
