--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4444",
   "main": "server/server.js",
-  "procy": "http://localhost:4444",
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.11.0",
+    "nodemailer": "^5.1.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "sweetalert2": "^8.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
